# olink

./: .gitignore  .pre-commit-config.yaml  .taplo.toml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  JOURNAL.md  README.md  TODO.md  pyproject.toml  release-please-config.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: pull_request_template.md  release-drafter.yml  release-please-config.json  renovate.json
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  feature-request.md
.github/workflows/: check-pr-title.yml  ci.yml  release-drafter.yml  release-please.yml  release.yml
src/olink/: __init__.py
src/olink/cli/: __init__.py  app.py
src/olink/core/: __init__.py  catalog.py  exceptions.py  project.py  targets.py
src/olink/tui/: __init__.py  actions.py  app.py  models.py  widgets.py
tests/: __init__.py  conftest.py
tests/cli/: test_cli.py
tests/core/: test_platforms.py  test_project.py  test_targets.py  test_utils.py
tests/fixtures/git_configs/: bitbucket_https  bitbucket_ssh  github_https  github_ssh  github_ssh_duplicate_keys  gitlab_ssh  with_upstream
tests/fixtures/repos/go_project/: go.mod
tests/fixtures/repos/haskell_project/: test-package.cabal
tests/fixtures/repos/maven_project/: pom.xml
tests/fixtures/repos/multi_ecosystem/: package.json  pyproject.toml
tests/fixtures/repos/npm_project/: package.json
tests/fixtures/repos/npm_scoped/: package.json
tests/fixtures/repos/open_vsx_project/: package.json
tests/fixtures/repos/perl_project/: Makefile.PL  cpanfile  dist.ini
tests/fixtures/repos/python_project/: pyproject.toml
tests/fixtures/repos/ruby_project/: mygem.gemspec
tests/fixtures/repos/rust_project/: Cargo.toml
tests/tui/: test_tui.py
