[project]
name = "olink"
version = "0.1.0"
description = "Omni Link"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyperclip==1.11.0",
    "typer==0.21.1",
    "textual>=3.0.0",
]

[project.scripts]
olink = "olink.cli:main"

[dependency-groups]
dev = [
    "pytest==9.0.2",
]

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"
