[project]
name = "olink"
version = "0.1.0"
description = "A CLI tool that opens external URLs related to your project."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Hasan Sezer Taşan", email = "hasansezertasan@gmail.com" },
]
keywords = [
    "cli",
    "tui",
    "developer-tools",
    "git",
    "github",
    "gitlab",
    "bitbucket",
    "pypi",
    "npm",
    "open-url",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "typer==0.21.1",
    "defusedxml>=0.7.1",
]

[project.urls]
Homepage = "https://github.com/hasansezertasan/olink"
Repository = "https://github.com/hasansezertasan/olink"
Issues = "https://github.com/hasansezertasan/olink/issues"
Changelog = "https://github.com/hasansezertasan/olink/blob/main/CHANGELOG.md"

[project.optional-dependencies]
tui = [
    "textual>=3.0.0",
    "pyperclip==1.11.0",
]

[project.scripts]
olink = "olink.cli:main"

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio>=0.24",
    "mypy>=1.11",
    "olink[tui]",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ANN", "RUF"]
ignore = [
    "ANN401",
    "E501",
    "RUF012",
    "ANN204",
    "RUF022",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "B", "RUF043", "I001", "E402"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/olink"]

[tool.hatch.build.targets.wheel.force-include]
"src/olink/py.typed" = "olink/py.typed"

[tool.hatch.build.targets.sdist]
include = [
    "src/olink",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
files = ["src/olink"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = ["pyperclip", "defusedxml.*"]
ignore_missing_imports = true
