[project]
name = "olink"
dynamic = ["version"]
description = "A CLI tool that opens external URLs related to your project."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Hasan Sezer Taşan", email = "hasansezertasan@gmail.com" }]
keywords = [
  "cli",
  "tui",
  "developer-tools",
  "git",
  "github",
  "gitlab",
  "bitbucket",
  "pypi",
  "npm",
  "open-url",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development",
  "Topic :: Software Development :: Version Control :: Git",
  "Topic :: Utilities",
  "Typing :: Typed",
]
dependencies = ["typer==0.26.7", "defusedxml>=0.7.1"]

[project.urls]
Homepage = "https://github.com/hasansezertasan/olink"
Repository = "https://github.com/hasansezertasan/olink"
Issues = "https://github.com/hasansezertasan/olink/issues"
Changelog = "https://github.com/hasansezertasan/olink/releases"

[project.optional-dependencies]
tui = ["textual>=3.0.0", "pyperclip==1.11.0"]

[project.scripts]
olink = "olink.cli:main"

[dependency-groups]
dev = [
  "olink[tui]",
  { include-group = "lint" },
  { include-group = "test" },
  { include-group = "tool" },
]
lint = [
  "mypy>=1.11",
  "pyright>=1.1.403",
  "ty==0.0.51",
  "pyrefly==0.62.0",
  "pylint>=3.2.7",
  "ruff>=0.7",
  "taplo>=0.9.3",
  "typos>=1.30",
  "validate-pyproject[all]>=0.24",
  "vulture>=2.14",
  "slotscheck>=0.16.5",
]
test = [
  "pytest==9.1.1",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6.0",
  "pytest-mock~=3.12",
  "pytest-xdist>=3.6",
  "coverage[toml]>=7.6",
  "coverage-enable-subprocess==1.0",
]
tool = ["pre-commit>=4.0", "poethepoet>=0.30.0"]

[tool.uv]
trusted-publishing = "always"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-n auto --cov=olink --cov-report=term-missing"

[tool.coverage.run]
source_pkgs = ["olink"]
branch = true
parallel = true
omit = ["src/olink/_version.py"]

[tool.coverage.paths]
olink = ["src/olink", "*/olink/src/olink"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ANN", "RUF"]
ignore = ["ANN401", "E501", "RUF012", "ANN204", "RUF022"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "B", "RUF043", "I001", "E402"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.1.0"

[tool.hatch.version.raw-options]
version_scheme = "only-version"
local_scheme = "no-local-version"

[tool.hatch.build]
hooks.vcs.version-file = "src/olink/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/olink"]

[tool.hatch.build.targets.wheel.force-include]
"src/olink/py.typed" = "olink/py.typed"

[tool.hatch.build.targets.sdist]
include = ["src/olink", "README.md", "LICENSE", "pyproject.toml"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
files = ["src/olink"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = ["pyperclip", "defusedxml.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "olink._version"
ignore_errors = true

[tool.pyright]
include = ["src/olink", "tests"]
pythonVersion = "3.14"
typeCheckingMode = "strict"
reportMissingImports = "error"

# Tests use monkeypatch lambdas, access private members for white-box testing,
# and rely on plugin-typed fixtures — strict checks add noise without value.
[[tool.pyright.executionEnvironments]]
root = "tests"
reportPrivateUsage = "none"
reportMissingParameterType = "none"
reportUnknownParameterType = "none"
reportUnknownArgumentType = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownLambdaType = "none"

[tool.ty.src]
include = ["src", "tests"]
respect-ignore-files = false

[tool.ty.environment]
python-version = "3.14"

[tool.ty.terminal]
error-on-warning = true

[tool.pyrefly]
python-version = "3.14"
project-includes = ["src", "tests"]

[tool.pylint.MASTER]
ignore-paths = ["^tests/.*$", "^src/olink/_version\\.py$"]

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "missing-module-docstring",
  "missing-function-docstring",
  "missing-class-docstring",
  "too-few-public-methods",
  "line-too-long",
]

[tool.pylint.DESIGN]
max-args = 10
max-positional-arguments = 10
max-branches = 20

[tool.vulture]
ignore_decorators = ["@app.command", "@app.callback"]
ignore_names = ["return_value", "side_effect", "pytestmark"]
min_confidence = 70
paths = ["src", "tests"]
exclude = ["src/olink/_version.py"]

[tool.slotscheck]
strict-imports = false
exclude-modules = "olink.tui"

[tool.poe]
executor.type = "uv"

[tool.poe.tasks.test]
help = "Run tests"
cmd = "pytest"

[tool.poe.tasks.style]
help = "Run linters and formatters"
sequence = [
  { cmd = "ruff check ." },
  { cmd = "ruff format --check ." },
  { cmd = "typos" },
  { cmd = "validate-pyproject pyproject.toml" },
  { cmd = "taplo lint" },
  { cmd = "taplo format --check" },
]

[tool.poe.tasks.typecheck]
help = "Run all type checkers"
sequence = [
  { cmd = "mypy" },
  { cmd = "pyright" },
  { cmd = "ty check" },
  { cmd = "pyrefly check" },
  { cmd = "pylint src" },
  { cmd = "vulture" },
  { cmd = "slotscheck -m olink" },
]

[tool.poe.tasks.fix]
help = "Auto-fix style issues"
sequence = [
  { cmd = "ruff check --fix ." },
  { cmd = "ruff format ." },
  { cmd = "taplo format" },
]
